<resources>
    <string name="app_name">Bus Application</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="error_password">パスワードが間違っています</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="title_introduce">Introduce</string>
    <string name="title_ride">Ride</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_main">Main</string>

    <!-- bus Name -->
    <string-array name="Array_bus">
        <item>北鉄バス</item>
        <item>まちバス</item>
        <item>金沢周遊バス</item>
        <item>ふらっとバス</item>
        <item>JRバス</item>
    </string-array>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_bus">Bus</string>
    <string name="text_enter_ride">乗車人数を入力してください。</string>
    <string name="text_adult">大人</string>
    <string name="text_child">子供</string>
    <string name="text_ride_off">降車QRに進む</string>
    <string name="text_person">人</string>
    <string name="title_activity_ride_off">RideOffActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="return_home">Homeに戻ります</string>
    <string name="button_return">戻る</string>
    <string name="button_submit">確定</string>
    <string name="button_ride_wait">降車にすすむ</string>
    <string name="button_next">次へ</string>
    <string name="button_cancel">キャンセル</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="bus_name">bus_name</string>
    <string name="title_introduce_main">金沢を走るバスの一覧</string>
    <string name="go_website">公式Webサイトを見る</string>

    <!-- Permission -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <!-- map -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
</resources>